<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="20dp"
    android:clickable="true"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <EditText
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/normal_text"
        android:singleLine="true"
        android:lines="1"
        android:imeOptions="actionNext"
        android:background="@drawable/selector_edittext"
        android:hint="@string/title_id" />

    <EditText
        android:id="@+id/parcel_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/normal_text"
        android:singleLine="true"
        android:lines="1"
        android:imeOptions="actionNext"
        android:background="@drawable/selector_edittext"
        android:hint="@string/parcel_id" />

    <EditText
        android:id="@+id/plan_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:singleLine="true"
        android:lines="1"
        android:imeOptions="actionNext"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/normal_text"
        android:background="@drawable/selector_edittext"
        android:hint="@string/plan_id" />

    <EditText
        android:id="@+id/owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/normal_text"
        android:singleLine="true"
        android:lines="1"
        android:imeOptions="actionDone"
        android:background="@drawable/selector_edittext"
        android:hint="@string/owner" />

    <LinearLayout
        android:id="@+id/iv_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_40"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_blue_selector"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_search_icon"/>
        <io.aequalis.lava.utils.SFBoldTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/normal_text"
            android:layout_marginLeft="10dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:letterSpacing="0.1"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>